--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@tabler/icons-react": "^3.36.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-i18next": "^15.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-i18next": "^16.5.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
