--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-i18next": "^15.4.3",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-i18next": "^16.5.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
