--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-list": "^2.4.1",
+    "framer-motion": "^12.26.2",
     "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
