--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "country-list": "^2.4.1",
     "framer-motion": "^12.26.2",
+    "html-to-pdf": "^0.1.11",
+    "html2pdf.js": "^0.14.0",
     "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
